# clumsy-stm-bot

./: .gitignore  .~lock.robot_field_evaluation.ods#  Cargo.toml  README.md  build.rs  robot_field_evaluation.ods
.cargo/: config.toml
src/: conversions.rs  drivers.rs  lib.rs  main.rs
src/conversions/: angle_to_speed.rs
src/drivers/: line_sensor.rs  motor.rs  servo.rs  sonar.rs
tests/: integration.rs
