[package]
edition = "2024"
name = "clumsy-stm-bot"
version = "1.0.1"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = { version = "1.0.0" }

num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embassy-stm32 = { version = "0.4.0", features = [
    "stm32l476rg",
    "defmt",
    "time-driver-any",
    "memory-x",
    "exti",
] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-executor = { version = "0.9.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
defmt-test = "0.4.0"
libm = "0.2.15"
embedded-hal-async = "1.0.0"
hcsr04_async = "0.4.0"
heapless = "0.9.1"


[[bin]]
name = "clumsy-stm-bot"
harness = false

[lib]
harness = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
